--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>cw3</title>
     <link rel="stylesheet" href="./assets/style.css" />
+    <link href='https://fonts.googleapis.com/css?family=Amatic SC' rel='stylesheet'>
   </head>
   <!------------------ style.css التعديلات ستكون في ملف ------------------>
   <body>
